--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --no-cache --watchAll"
+    "start": "node dist/main/server.js",
+    "test": "jest --no-cache --watchAll",
+    "build": "rimraf dist && tsc -p tsconfig-build.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "rimraf": "^3.0.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "cz-conventional-changelog": "^3.3.0",
@@ -22,5 +30,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
